--- a/gestion/templates/gestion/quittance_pdf.html
+++ b/gestion/templates/gestion/quittance_pdf.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load path_filters %}
 <!DOCTYPE html>
 <html lang="fr">
 <head>
@@ -75,8 +76,8 @@
     <div class="header">
         <div>
             {% if agence.logo %}
-                <!-- Utilisation de .path pour que WeasyPrint trouve le fichier localement -->
-                <img src="{{ agence.logo.path }}" alt="Logo Agence" class="logo">
+                <!-- CORRECTION : Utilisation du filtre pour normaliser le chemin -->
+                <img src="{{ agence.logo.path|to_path_uri }}" alt="Logo Agence" class="logo">
             {% endif %}
         </div>
         <div class="header-text">
