--- a/gestion/templates/gestion/password_reset_confirm.html
+++ b/gestion/templates/gestion/password_reset_confirm.html
@@ -23,12 +23,22 @@
     
                             <div class="mb-3">
                                 <label for="{{ form.new_password1.id_for_label }}" class="form-label">{{ form.new_password1.label }}</label>
-                                {{ form.new_password1 }}
+                                <div class="input-group">
+                                    {{ form.new_password1 }}
+                                    <button class="btn btn-outline-secondary js-password-toggle" type="button" style="border-top-left-radius: 0; border-bottom-left-radius: 0;">
+                                        <i class="fas fa-eye-slash"></i>
+                                    </button>
+                                </div>
                                 {{ form.new_password1.errors }}
                             </div>
                             <div class="mb-3">
                                 <label for="{{ form.new_password2.id_for_label }}" class="form-label">{{ form.new_password2.label }}</label>
-                                {{ form.new_password2 }}
+                                <div class="input-group">
+                                    {{ form.new_password2 }}
+                                    <button class="btn btn-outline-secondary js-password-toggle" type="button" style="border-top-left-radius: 0; border-bottom-left-radius: 0;">
+                                        <i class="fas fa-eye-slash"></i>
+                                    </button>
+                                </div>
                                 {{ form.new_password2.errors }}
                             </div>
     
@@ -50,4 +60,5 @@
         </div>
     </div>
 </div>
+
 {% endblock %}
