modifier typeBien et moyenpaiement

--- a/gestion/templates/gestion/quittance_pdf.html
+++ b/gestion/templates/gestion/quittance_pdf.html
@@ -105,7 +105,7 @@
                 <strong>Locataire</strong><br>
                 {{ locataire }}<br>
                 {{ immeuble.addresse }}<br>
-                Unité : {{ chambre.designation }}
+                Unité : {{ chambre }}
             </div>
         </div>
 
