--- a/gestion/templates/gestion/quittance_pdf.html
+++ b/gestion/templates/gestion/quittance_pdf.html
@@ -104,6 +104,7 @@
             <div>
                 <strong>Locataire</strong><br>
                 {{ locataire }}<br>
+                {% if locataire.telephone %}Tél : {{ locataire.telephone }}<br>{% endif %}
                 {{ immeuble.addresse }}<br>
                 Unité : {{ chambre }}
             </div>
